force-app/main/default/objects/Promocion__c/Promocion__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena los datos de las promociones</description>
    <label>Promocion</label>
    <nameField>
        <label>Nombre comercial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promociones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>