force-app/main/default/objects/Promocion__c/fields/Administrativo__c.field-meta.xml
<CustomField>
    <fullName>Administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrativo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Planificación</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Promociones5</relationshipName>
    <type>Lookup</type>
</CustomField>