force-app/main/default/objects/Promocion__c/fields/Aeropuertos__c.field-meta.xml
<CustomField>
    <fullName>Aeropuertos__c</fullName>
    <label>Aeropuertos</label>
    <type>Url</type>
</CustomField>