force-app/main/default/objects/Promocion__c/fields/Aerotermia__c.field-meta.xml
<CustomField>
    <fullName>Aerotermia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aerotermia</label>
    <type>Checkbox</type>
</CustomField>