force-app/main/default/objects/Promocion__c/fields/Agrupador_de_viviendas__c.field-meta.xml
<CustomField>
    <fullName>Agrupador_de_viviendas__c</fullName>
    <label>Agrupador de viviendas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dormitorios</fullName>
            </value>
            <value>
                <fullName>Banos</fullName>
                <label>Baños</label>
            </value>
            <value>
                <fullName>tipo_inmueble</fullName>
                <label>Tipo de immueble</label>
            </value>
            <value>
                <fullName>Planta</fullName>
            </value>
            <value>
                <fullName>superficie_construida</fullName>
                <label>Superficie construida</label>
            </value>
            <value>
                <fullName>superficie_terrazas_jardin</fullName>
                <label>Superficie terrazas/jardín</label>
            </value>
            <value>
                <fullName>precio_desde</fullName>
                <label>Precio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>