force-app/main/default/objects/Promocion__c/fields/Alertas__c.field-meta.xml
<CustomField>
    <fullName>Alertas__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Alertas?</label>
    <type>Checkbox</type>
</CustomField>