force-app/main/default/objects/Promocion__c/fields/Aprobado_actual__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_actual__c</fullName>
    <label>Aprobado actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>