force-app/main/default/objects/Promocion__c/fields/Aprobar_tarifario__c.field-meta.xml
<CustomField>
    <fullName>Aprobar_tarifario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobar tarifario</label>
    <type>Checkbox</type>
</CustomField>