force-app/main/default/objects/Promocion__c/fields/Ascensores__c.field-meta.xml
<CustomField>
    <fullName>Ascensores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ascensores</label>
    <type>Checkbox</type>
</CustomField>