force-app/main/default/objects/Promocion__c/fields/Autobuses__c.field-meta.xml
<CustomField>
    <fullName>Autobuses__c</fullName>
    <label>Autobuses</label>
    <type>Url</type>
</CustomField>