force-app/main/default/objects/Promocion__c/fields/Buhardilla__c.field-meta.xml
<CustomField>
    <fullName>Buhardilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buhardilla</label>
    <type>Checkbox</type>
</CustomField>