force-app/main/default/objects/Promocion__c/fields/Calidades__c.field-meta.xml
<CustomField>
    <fullName>Calidades__c</fullName>
    <label>Calidades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calidades</valueSetName>
    </valueSet>
</CustomField>