force-app/main/default/objects/Promocion__c/fields/Calificacion_Energetica_A__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Energetica_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calificación Energética A</label>
    <type>Checkbox</type>
</CustomField>