force-app/main/default/objects/Promocion__c/fields/Cantidad_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Reserva__c</fullName>
    <label>Importe de Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>