force-app/main/default/objects/Promocion__c/fields/Cargador_Coches_Electricos__c.field-meta.xml
<CustomField>
    <fullName>Cargador_Coches_Electricos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargador Coches Eléctricos</label>
    <type>Checkbox</type>
</CustomField>