force-app/main/default/objects/Promocion__c/fields/Centros_Comerciales__c.field-meta.xml
<CustomField>
    <fullName>Centros_Comerciales__c</fullName>
    <label>Centros Comerciales</label>
    <type>Url</type>
</CustomField>