force-app/main/default/objects/Promocion__c/fields/Chiill_Out__c.field-meta.xml
<CustomField>
    <fullName>Chiill_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chiill Out</label>
    <type>Checkbox</type>
</CustomField>