force-app/main/default/objects/Promocion__c/fields/Chill_Out__c.field-meta.xml
<CustomField>
    <fullName>Chill_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chill Out</label>
    <type>Checkbox</type>
</CustomField>