force-app/main/default/objects/Promocion__c/fields/Codigo_de_la_promocion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_la_promocion__c</fullName>
    <label>Código de la promoción contable</label>
    <length>25</length>
    <type>Text</type>
</CustomField>