force-app/main/default/objects/Promocion__c/fields/Codigo_delegacion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_delegacion__c</fullName>
    <label>Código delegación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DAN1</fullName>
                <isActive>false</isActive>
                <label>DAN1-ANDALUCIA</label>
            </value>
            <value>
                <fullName>DAN2</fullName>
                <isActive>false</isActive>
                <label>DAN2-ANDALUCIA</label>
            </value>
            <value>
                <fullName>DAR1</fullName>
                <isActive>false</isActive>
                <label>DAR1-ARAGÓN</label>
            </value>
            <value>
                <fullName>DC01</fullName>
                <isActive>false</isActive>
                <label>DC01</label>
            </value>
            <value>
                <fullName>DC02</fullName>
                <isActive>false</isActive>
                <label>DC02</label>
            </value>
            <value>
                <fullName>DC03</fullName>
                <isActive>false</isActive>
                <label>DC03</label>
            </value>
            <value>
                <fullName>DC05</fullName>
                <isActive>false</isActive>
                <label>DC05</label>
            </value>
            <value>
                <fullName>DC07</fullName>
                <isActive>false</isActive>
                <label>DC07</label>
            </value>
            <value>
                <fullName>DC08</fullName>
                <isActive>false</isActive>
                <label>DC08</label>
            </value>
            <value>
                <fullName>DCA1</fullName>
                <isActive>false</isActive>
                <label>DCA1-CATALUÑA</label>
            </value>
            <value>
                <fullName>DCE1</fullName>
                <isActive>false</isActive>
                <label>DCE1-MADRID CENTRO</label>
            </value>
            <value>
                <fullName>DCE2</fullName>
                <isActive>false</isActive>
                <label>DCE2-MADRID CENTRO</label>
            </value>
            <value>
                <fullName>DCE3</fullName>
                <isActive>false</isActive>
                <label>DCE3-MADRID CENTRO</label>
            </value>
            <value>
                <fullName>DCE4</fullName>
                <isActive>false</isActive>
                <label>DCE4-MADRID CENTRO</label>
            </value>
            <value>
                <fullName>DE11</fullName>
            </value>
            <value>
                <fullName>DE12</fullName>
            </value>
            <value>
                <fullName>DE13</fullName>
            </value>
            <value>
                <fullName>DESP</fullName>
                <isActive>false</isActive>
                <label>DESP-DELEGACION ESPECIALES</label>
            </value>
            <value>
                <fullName>DG01</fullName>
                <isActive>false</isActive>
                <label>DG01</label>
            </value>
            <value>
                <fullName>DG03</fullName>
                <isActive>false</isActive>
                <label>DG03</label>
            </value>
            <value>
                <fullName>DG04</fullName>
                <isActive>false</isActive>
                <label>DG04</label>
            </value>
            <value>
                <fullName>DG08</fullName>
                <isActive>false</isActive>
                <label>DG08</label>
            </value>
            <value>
                <fullName>DLE1</fullName>
                <isActive>false</isActive>
                <label>DLE1-DELEGACION LEVANTE</label>
            </value>
            <value>
                <fullName>DP00</fullName>
                <isActive>false</isActive>
                <label>DP00-PROMOCION PROPIA - ESTRUCTURA CENTRAL</label>
            </value>
            <value>
                <fullName>DP01</fullName>
                <isActive>false</isActive>
                <label>DP01</label>
            </value>
            <value>
                <fullName>DP02</fullName>
                <isActive>false</isActive>
                <label>DP02</label>
            </value>
            <value>
                <fullName>DP04</fullName>
                <isActive>false</isActive>
                <label>DP04</label>
            </value>
            <value>
                <fullName>DP05</fullName>
                <isActive>false</isActive>
                <label>DP05</label>
            </value>
            <value>
                <fullName>DP06</fullName>
                <isActive>false</isActive>
                <label>DP06</label>
            </value>
            <value>
                <fullName>DP07</fullName>
                <isActive>false</isActive>
                <label>DP07</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>