force-app/main/default/objects/Promocion__c/fields/Colegios__c.field-meta.xml
<CustomField>
    <fullName>Colegios__c</fullName>
    <label>Colegios</label>
    <type>Url</type>
</CustomField>