force-app/main/default/objects/Promocion__c/fields/Comercial__c.field-meta.xml
<CustomField>
    <fullName>Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Comercial</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Comercial</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Comercial API</value>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>0055w00000CyTiQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Promociones2</relationshipName>
    <type>Lookup</type>
</CustomField>