force-app/main/default/objects/Promocion__c/fields/Comercial_API__c.field-meta.xml
<CustomField>
    <fullName>Comercial_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comercial API</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Comercial API</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Promociones4</relationshipName>
    <type>Lookup</type>
</CustomField>