force-app/main/default/objects/Promocion__c/fields/Comercializa__c.field-meta.xml
<CustomField>
    <fullName>Comercializa__c</fullName>
    <description>Campo picklist que distingue entre ADI y SOLDIT HOMES</description>
    <label>Comercializa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADI</fullName>
            </value>
            <value>
                <fullName>SOLDIT HOMES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>