force-app/main/default/objects/Promocion__c/fields/Condiciones_pago_escritura__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_pago_escritura__c</fullName>
    <label>Condiciones de pago escritura</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>