force-app/main/default/objects/Promocion__c/fields/Condiciones_pago_reserva__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_pago_reserva__c</fullName>
    <label>Condiciones de pago reserva</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>