force-app/main/default/objects/Promocion__c/fields/CONGA_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Oficina__c</fullName>
    <formula>IF(NOT(OR(ISNULL(Numero_de_cuenta_bancaria_1__c ), ISBLANK(Numero_de_cuenta_bancaria_1__c ))), MID(Numero_de_cuenta_bancaria_1__c, 10, 4), MID(Numero_de_cuenta_bancaria_2__c, 10, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Oficina</label>
    <type>Text</type>
</CustomField>