force-app/main/default/objects/Promocion__c/fields/CONGA_Total_provisi_n_fondos__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Total_provisi_n_fondos__c</fullName>
    <formula>PrevisionIBI__c +  PrevisionBasuras__c +  ProvisionCPViviendaParking__c +  ProvisionCPParkingAdicional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA Total provisión fondos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>