force-app/main/default/objects/Promocion__c/fields/CONGA_YearIniEscr__c.field-meta.xml
<CustomField>
    <fullName>CONGA_YearIniEscr__c</fullName>
    <formula>TEXT(YEAR(Inicio_de_escrituraciones__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_YearIniEscr</label>
    <type>Text</type>
</CustomField>