force-app/main/default/objects/Promocion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apoderado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Promociones</relationshipLabel>
    <relationshipName>Promociones</relationshipName>
    <type>Lookup</type>
</CustomField>