force-app/main/default/objects/Promocion__c/fields/ContratoAltasSemana__c.field-meta.xml
<CustomField>
    <fullName>ContratoAltasSemana__c</fullName>
    <label>Contrato Altas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>