force-app/main/default/objects/Promocion__c/fields/ContratoBajasSemana__c.field-meta.xml
<CustomField>
    <fullName>ContratoBajasSemana__c</fullName>
    <label>Contrato Bajas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>