force-app/main/default/objects/Promocion__c/fields/ContratoNetoSemana__c.field-meta.xml
<CustomField>
    <fullName>ContratoNetoSemana__c</fullName>
    <formula>ContratoAltasSemana__c -  ContratoBajasSemana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato Neto semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>