force-app/main/default/objects/Promocion__c/fields/Contratos_MultiIdioma__c.field-meta.xml
<CustomField>
    <fullName>Contratos_MultiIdioma__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Seleccionar si los contratos de la promoción estarán disponibles en varios idiomas</description>
    <inlineHelpText>Activar si los contratos de la promoción están disponibles en varios idiomas</inlineHelpText>
    <label>Contratos MultiIdioma?</label>
    <type>Checkbox</type>
</CustomField>