force-app/main/default/objects/Promocion__c/fields/Criterio_Asignacion_Candidatos__c.field-meta.xml
<CustomField>
    <fullName>Criterio_Asignacion_Candidatos__c</fullName>
    <label>Criterio Asignación Candidatos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Igualdad de Candidatos Asignados</fullName>
                <default>true</default>
                <label>Igualdad de Candidatos Asignados</label>
            </value>
            <value>
                <fullName>Mayor Número de Convertidos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>