force-app/main/default/objects/Promocion__c/fields/Cuenta_Activa_2__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Activa_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta Activa 2</label>
    <type>Checkbox</type>
</CustomField>