force-app/main/default/objects/Promocion__c/fields/Delegacion_comercial__c.field-meta.xml
<CustomField>
    <fullName>Delegacion_comercial__c</fullName>
    <label>Delegación comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delegacion</valueSetName>
    </valueSet>
</CustomField>