force-app/main/default/objects/Promocion__c/fields/Deportivas__c.field-meta.xml
<CustomField>
    <fullName>Deportivas__c</fullName>
    <label>Deportivas</label>
    <type>Url</type>
</CustomField>