force-app/main/default/objects/Promocion__c/fields/Descricion_pequena__c.field-meta.xml
<CustomField>
    <fullName>Descricion_pequena__c</fullName>
    <label>Descripción pequeña</label>
    <type>TextArea</type>
</CustomField>