force-app/main/default/objects/Promocion__c/fields/Descripcion_final_Web__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_final_Web__c</fullName>
    <label>Entradilla Web</label>
    <type>TextArea</type>
</CustomField>