force-app/main/default/objects/Promocion__c/fields/Descripcion_Suelo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Suelo__c</fullName>
    <inlineHelpText>Nombre de la parcela/ suelo y su descripción</inlineHelpText>
    <label>Descripción Suelo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>