force-app/main/default/objects/Promocion__c/fields/DiasPosventa__c.field-meta.xml
<CustomField>
    <fullName>DiasPosventa__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Días de duración del hito Posventa tras la Fecha Escrituración Real de la oportunidad</description>
    <label>Días Posventa</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>