force-app/main/default/objects/Promocion__c/fields/Diferencia_Precios_Activos_y_Propuestos__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Precios_Activos_y_Propuestos__c</fullName>
    <formula>Suma_Precios_Propuestos_Inmuebles__c - Suma_Precios_Inmuebles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia Precios Activos y Propuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>