force-app/main/default/objects/Promocion__c/fields/Direccion_punto_venta_comercializadora__c.field-meta.xml
<CustomField>
    <fullName>Direccion_punto_venta_comercializadora__c</fullName>
    <label>Dirección punto venta comercializadora</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>