force-app/main/default/objects/Promocion__c/fields/Direccion_Suelo__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Suelo__c</fullName>
    <label>Dirección Suelo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>