force-app/main/default/objects/Promocion__c/fields/Director_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Director_Negocio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Negocio Aprobador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Dirección</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PromocionesDXr6</relationshipName>
    <type>Lookup</type>
</CustomField>