force-app/main/default/objects/Promocion__c/fields/Distrito__c.field-meta.xml
<CustomField>
    <fullName>Distrito__c</fullName>
    <label>Distrito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>