force-app/main/default/objects/Promocion__c/fields/Domotica__c.field-meta.xml
<CustomField>
    <fullName>Domotica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domótica</label>
    <type>Checkbox</type>
</CustomField>