force-app/main/default/objects/Promocion__c/fields/Email_promocion_comercializadora__c.field-meta.xml
<CustomField>
    <fullName>Email_promocion_comercializadora__c</fullName>
    <label>Email promoción comercializadora</label>
    <type>Email</type>
</CustomField>