force-app/main/default/objects/Promocion__c/fields/EmailContacto__c.field-meta.xml
<CustomField>
    <fullName>EmailContacto__c</fullName>
    <description>Dirección de correo electrónico del contacto</description>
    <label>Email Contacto</label>
    <type>Email</type>
</CustomField>