force-app/main/default/objects/Promocion__c/fields/Entidad_Bancaria1__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Bancaria1__c</fullName>
    <label>Entidad Bancaria 1</label>
    <type>TextArea</type>
</CustomField>