force-app/main/default/objects/Promocion__c/fields/Entidad_Bancaria2__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Bancaria2__c</fullName>
    <label>Entidad Bancaria 2</label>
    <type>TextArea</type>
</CustomField>