force-app/main/default/objects/Promocion__c/fields/Entidadbancariahipoteca__c.field-meta.xml
<CustomField>
    <fullName>Entidadbancariahipoteca__c</fullName>
    <label>Entidad bancaria hipoteca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>