force-app/main/default/objects/Promocion__c/fields/Envio_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Envio_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si el checkBox está activado las facturas de la promoción se envían al ERP de Oracle. No se envían en caso contrario.</description>
    <label>Envio Oracle?</label>
    <type>Checkbox</type>
</CustomField>