force-app/main/default/objects/Promocion__c/fields/Estacion_Esqui__c.field-meta.xml
<CustomField>
    <fullName>Estacion_Esqui__c</fullName>
    <label>Estación Esqui</label>
    <type>Url</type>
</CustomField>