force-app/main/default/objects/Promocion__c/fields/Farmacias__c.field-meta.xml
<CustomField>
    <fullName>Farmacias__c</fullName>
    <label>Farmacias</label>
    <type>Url</type>
</CustomField>