force-app/main/default/objects/Promocion__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fases_de_promocion</valueSetName>
    </valueSet>
</CustomField>