force-app/main/default/objects/Promocion__c/fields/Fecha_de_escritura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_escritura__c</fullName>
    <label>Fecha de escritura</label>
    <type>Date</type>
</CustomField>