force-app/main/default/objects/Promocion__c/fields/Fecha_Objetivo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Objetivo_de_ventas__c</fullName>
    <label>Fecha Objetivo de ventas</label>
    <type>Date</type>
</CustomField>