force-app/main/default/objects/Promocion__c/fields/FechaCreditoPromotor__c.field-meta.xml
<CustomField>
    <fullName>FechaCreditoPromotor__c</fullName>
    <label>Fecha crédito promotor</label>
    <type>Date</type>
</CustomField>