force-app/main/default/objects/Promocion__c/fields/Fin_de_Comercializacion_real__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_Comercializacion_real__c</fullName>
    <label>Fin de Comercialización</label>
    <type>Date</type>
</CustomField>