force-app/main/default/objects/Promocion__c/fields/Finca__c.field-meta.xml
<CustomField>
    <fullName>Finca__c</fullName>
    <label>Finca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>