force-app/main/default/objects/Promocion__c/fields/FLAG_ApprovalProcess_Aux__c.field-meta.xml
<CustomField>
    <fullName>FLAG_ApprovalProcess_Aux__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLAG_ApprovalProcess_Aux</label>
    <type>Checkbox</type>
</CustomField>