force-app/main/default/objects/Promocion__c/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <label>Folio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>