force-app/main/default/objects/Promocion__c/fields/Formula_Suma_Precio_Inmuebles__c.field-meta.xml
<CustomField>
    <fullName>Formula_Suma_Precio_Inmuebles__c</fullName>
    <formula>Suma_Precios_Inmuebles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suma Precio Inmuebles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>