force-app/main/default/objects/Promocion__c/fields/Fotocasa__c.field-meta.xml
<CustomField>
    <fullName>Fotocasa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fotocasa</label>
    <type>Checkbox</type>
</CustomField>