force-app/main/default/objects/Promocion__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>En días</inlineHelpText>
    <label>Frecuencia de contacto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>