force-app/main/default/objects/Promocion__c/fields/Frecuencia_Intentos_visita__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_Intentos_visita__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>En días</inlineHelpText>
    <label>Frecuencia Intentos visita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>