force-app/main/default/objects/Promocion__c/fields/Gasolineras__c.field-meta.xml
<CustomField>
    <fullName>Gasolineras__c</fullName>
    <label>Gasolineras</label>
    <type>Url</type>
</CustomField>