force-app/main/default/objects/Promocion__c/fields/Gestionada_Internamente__c.field-meta.xml
<CustomField>
    <fullName>Gestionada_Internamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gestionada Internamente</label>
    <type>Checkbox</type>
</CustomField>