force-app/main/default/objects/Promocion__c/fields/Gimnasio__c.field-meta.xml
<CustomField>
    <fullName>Gimnasio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gimnasio</label>
    <type>Checkbox</type>
</CustomField>